# IITH-LAB

./: .gitattributes  .gitignore
.devcontainer/: devcontainer.json
ACN/assignment_01/: task_02.pcapng
ACN/assignment_02/DNSClient/: CMakeLists.txt  DNSClient.cpp  DNSClient.h  DNSHeader.cpp  DNSHeader.h  DNSLabel.cpp  DNSLabel.h  DNSMessage.cpp  DNSMessage.h  DNSQuestion.cpp  DNSQuestion.h  DNSResourceRecord.cpp  DNSResourceRecord.h  QClass.hpp  QType.hpp  RData.cpp  RData.h  README.md  main.cpp
ACN/assignment_02/TCPChat/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatClientHandler.cpp  ChatClientHandler.h  ChatClientThreadHandler.cpp  ChatClientThreadHandler.h  ChatCommon.hpp  ChatMessage.cpp  ChatMessage.h  ChatQueueHandler.cpp  ChatQueueHandler.h  ChatServer.cpp  ChatServer.h  README.md  client.main.cpp  server.main.cpp
ACN/assignment_03/: assignment_03_task_01.pcapng  assignment_03_task_02a.pcapng  assignment_03_task_02c.pcapng
ACN/assignment_04/: CMakeLists.txt  GBNFTPPacket.cpp  GBNFTPPacket.h  GBNFTPSocket.cpp  GBNFTPSocket.h  README.md  SAWPacket.cpp  SAWPacket.h  SAWSocket.cpp  SAWSocket.h  UDPSocket.cpp  UDPSocket.h  addDelay.sh  addLoss.sh  input.txt  main.ftp.gbn.client.cpp  main.ftp.gbn.server.cpp  main.ftp.saw.client.cpp  main.ftp.saw.server.cpp  removeDelay.sh
ACN/assignment_06/: CMakeLists.txt  PNat.cpp  PNat.h  RawSocket.cpp  RawSocket.h  TcpClient.cpp  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h  main.pnat.cpp
ACN/tutorial_02/: CMakeLists.txt  README.md  TCPEchoClient.cpp  TCPEchoClient.h  TCPEchoServer.cpp  TCPEchoServer.h  UDPEchoClient.cpp  UDPEchoClient.h  UDPEchoServer.cpp  UDPEchoServer.h  client.cpp  server.cpp
ADSA/assignment_01/: CMakeLists.txt  inversionpair.cpp  kthroot.cpp  test.cpp
ADSA/assignment_03/cpp_cs20mtech12006/: BSM Assignment - 02.docx
ADSA/assignment_03/cpp_cs20mtech12006/src/: Makefile  seq_align  seq_align.cpp
ADSA/cpp_cs20mtech12006/src/: dy2sum.cpp  rb_tree.cpp
ADSA/untitled folder/cpp_cs20mtech12006/src/: Makefile
BSM/Chapter1Programs/: keval.out  mm1  mm1.c  mm1.in  mm1.out  mm1.py  mm1_10.out  mm1_100.out  mm1_1000.out  mm1_10000.out  mm1alt.c  mm1alt.in  mm1alt.out
BSM/HW2/: a.out  lcgrand.h.gch  rand_var.c  randoms.txt
BSM/Project/: double_mm1  double_mm1.c  double_mm1.cpp  double_mm1.py  double_mm1_old.py  inv  mm1  mm1alt
IOT/assignment_01/: README.md  check.py  hq.py  output.txt  ref_output.txt  run-debug.sh  run-docker.sh  run.sh  uav.py  uav1.txt  uav2.txt  uav3.txt  uav4.txt  uav5.txt  uav6.txt  vehicle_location.txt
IOT/assignment_01/old/: uav1.txt  uav2.txt  uav3.txt  uav5.txt  uav6.txt
LO/: 01_test_03.txt  02_test_01.txt  02_test_03.txt  03_test_01.txt  assignment_01.py  assignment_02.py  assignment_03.py  assignment_03_n.py
SDN/00/: 00_task01_logs.txt  00_task02_logs.txt
SDN/01/: 01_task01.pcapng  01_task01_flush.pcapng  01_task01_manual.pcapng  01_task02_a.pcapng  01_task02_b.pcapng  of_tutorial.py
SDN/02/02-Repeater/: repeater.json  repeater.p4  repeater.p4i
SDN/02/02-Repeater/pcap/: s1-eth1_in.pcap  s1-eth2_out.pcap
SDN/02/03-L2_Basic_forwarding/: s1-commands.txt  topology.db
SDN/02/03-L2_Basic_forwarding/p4src/: l2_basic_forwarding.json  l2_basic_forwarding.p4  l2_basic_forwarding.p4i
SDN/02/03-L2_Basic_forwarding/pcap/: s1-eth1_in.pcap  s1-eth1_out.pcap  s1-eth2_in.pcap  s1-eth2_out.pcap  s1-eth3_in.pcap  s1-eth3_out.pcap  s1-eth4_in.pcap  s1-eth4_out.pcap
WNS/: Wifi Rate Control.txt  password.lst  wifi_task01_own.cap  wns_assignment05_task01_deauth.pcapng  wns_assignment05_task01_wpa.cap
